[package]
name = "microps-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
nix = "0.28.0"
pretty-hex = "0.4.1"
signal-hook = "0.3.17"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
